--- a/client/package.json
+++ b/client/package.json
@@ -2,7 +2,6 @@
   "name": "client",
   "version": "0.1.0",
   "proxy": "https://piora.space",
-  
   "private": true,
   "dependencies": {
     "@cloudinary/react": "^1.3.0",
@@ -32,6 +31,7 @@
     "codex.editor.simple-image": "^1.2.1",
     "connected-react-router": "^6.9.2",
     "firebase": "^9.7.0",
+    "i18next": "^22.4.9",
     "moment": "^2.29.3",
     "react": "^17.0.2",
     "react-cookie": "^4.1.1",
@@ -39,6 +39,7 @@
     "react-dropdown-date": "^2.2.7",
     "react-editor-js": "^2.0.6",
     "react-file-base64": "^1.0.3",
+    "react-i18next": "^12.1.5",
     "react-loading-skeleton": "^3.1.0",
     "react-paginate": "^8.1.3",
     "react-redux": "^7.2.8",
